feat: 로또 번호 생성중 오류 처리